adjust and avoid overlap cut content from footer

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -33,3 +33,12 @@ img {
 .tac {
     text-align: center;
 }
+
+table {
+    page-break-inside: auto;
+}
+
+tr {
+    page-break-inside: avoid;
+    page-break-after: auto;
+}
